force-app/main/default/objects/Account/fields/Test1__c.field-meta.xml
<CustomField>
    <fullName>Test1__c</fullName>
    <description>saas</description>
    <inlineHelpText>check</inlineHelpText>
    <label>Test1</label>
    <type>TextArea</type>
</CustomField>