force-app/main/default/objects/Account/fields/Test2__c.field-meta.xml
<CustomField>
    <fullName>Test2__c</fullName>
    <inlineHelpText>Check Test2</inlineHelpText>
    <label>Test2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>