force-app/main/default/objects/Account/fields/Test3__c.field-meta.xml
<CustomField>
    <fullName>Test3__c</fullName>
    <inlineHelpText>Check Test3</inlineHelpText>
    <label>Test3</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>