force-app/main/default/objects/Account/fields/TestNavneet_1__c.field-meta.xml
<CustomField>
    <fullName>TestNavneet_1__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TestNavneet_1</label>
    <type>Checkbox</type>
</CustomField>