force-app/main/default/objects/Account/fields/TestNavneet__c.field-meta.xml
<CustomField>
    <fullName>TestNavneet__c</fullName>
    <defaultValue>true</defaultValue>
    <label>TestNavneet</label>
    <type>Checkbox</type>
</CustomField>